--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   color: #fff;
-  background-image: url(/background-img.avif);
+  background-image: url(background-img.avif);
   display: flex;
   justify-content: center;
   height: 100vh;
@@ -43,7 +43,7 @@ input:focus {
 }
 
 .number {
-  font-size: 10em;
+  font-size: 15em;
   text-align: center;
   color: #de6a00;
 }
